--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
       background-color: #f5f5f5;
     }
 
-    header, .menu {
-      display: none;
-    }
-
     .menu {
       display: flex;
       flex-wrap: wrap;
@@ -56,55 +52,29 @@
       display: block;
     }
 
-    #login {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    #login input {
-      padding: 0.5rem;
-      font-size: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    #login button {
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      cursor: pointer;
+    header {
+      text-align: center;
+      padding: 1rem;
+      font-size: 1.5rem;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <div id="login">
-    <input type="password" id="password" placeholder="Enter password" />
-    <button onclick="checkPassword()">Access Site</button>
-  </div>
-
   <header id="header">Google Classroom</header>
 
   <div class="menu">
     <button onclick="showSite('art')">art.fullsusmtb.org</button>
     <button onclick="showSite('duck')">duck.quackprep.com</button>
+    <button onclick="showSite('blogbott')">login-live.blogbott.com</button>
   </div>
 
   <iframe id="art" src="https://art.fullsusmtb.org" allowfullscreen allow="fullscreen"></iframe>
   <iframe id="duck" src="https://duck.quackprep.com" allowfullscreen allow="fullscreen"></iframe>
+  <iframe id="blogbott" src="https://login-live.blogbott.com" allowfullscreen allow="fullscreen"></iframe>
 
   <script>
-    function checkPassword() {
-      const input = document.getElementById('password').value;
-      if (input === 'duck900') {
-        document.getElementById('login').style.display = 'none';
-        document.getElementById('header').style.display = 'block';
-        document.querySelector('.menu').style.display = 'flex';
-      } else {
-        alert('Incorrect password');
-      }
-    }
-
     function showSite(site) {
       document.querySelectorAll('iframe').forEach(frame => frame.classList.remove('active'));
       document.getElementById(site).classList.add('active');
