--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <button onclick="showSite('blogbott')">login-live.blogbott.com</button>
     <button onclick="showSite('coolgames')">Cool Games</button>
   </div>
-
+<p>Unfortunately,login-live.blogott.com got blocked.😭</p>
   <iframe id="blogbott" src="https://login-live.blogbott.com" allowfullscreen allow="fullscreen"></iframe>
   <iframe id="coolgames" src="https://a17kegher.wixsite.com/cool-games/all-games" allowfullscreen allow="fullscreen"></iframe>
 
