--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 <body>
 
   <div class="menu">
-    <button onclick="showSite('blogbott')">login-live.blogbott.com</button>
+    <button onclick="showSite('schooltool')">Saratoga SchoolTool</button>
     <button onclick="showSite('coolgames')">Cool Games</button>
   </div>
-<p>                                Unfortunately, login-live.blogott.com got blocked.😭</p>
-  <iframe id="blogbott" src="https://login-live.blogbott.com" allowfullscreen allow="fullscreen"></iframe>
+
+  <iframe id="schooltool" src="https://saratogaschools.net/Schooltool/index.html" allowfullscreen allow="fullscreen"></iframe>
   <iframe id="coolgames" src="https://a17kegher.wixsite.com/cool-games/all-games" allowfullscreen allow="fullscreen"></iframe>
 
   <script>
